--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -551,6 +551,46 @@ h6 {
 .sidebar-nav .nav-content a.active i {
   background-color: #000000;
 }
+/* setting nav */
+.sidebar-nav .nav-setting {
+  padding: 5px 0 0 0;
+  height: 220px;
+  margin: 0;
+  margin-top: 4px;
+  background: white;
+  list-style: none;
+  border-radius: 8px;
+}
+.sidebar-nav .nav-setting a {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  font-weight: 600;
+  color: #000000;
+  transition: 0.3;
+  padding: 10px 0 10px 40px;
+  transition: 0.3s;
+}
+.sidebar-nav .nav-setting a i {
+  font-size: 6px;
+  margin-right: 8px;
+  line-height: 0;
+  border-radius: 50%;
+}
+.sidebar-nav .nav-setting li:hover {
+  color: white;
+  background: #242790;
+}
+.sidebar-nav .nav-setting li:hover a {
+  color: white;
+}
+.sidebar-nav .nav-setting a:hover,
+.sidebar-nav .nav-setting a.active {
+  color: #000000;
+}
+.sidebar-nav .nav-setting a.active i {
+  background-color: #000000;
+}
 
 /*--------------------------------------------------------------
   # Dashboard
